# weather-aware-scheduler

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_STATUS.md  PLAN.md  PROGRESS.md  QUICKSTART_UI.md  README.md  coverage.xml  debug_request.py  pyproject.toml
.specify/memory/: constitution.md
.venve/: pyvenv.cfg
.venve/Scripts/: activate  activate.bat
configs/: .env.example  graph.config.yaml
datasets/: eval_min5.jsonl
docs/: TESTING_WITH_REAL_API.md
frontend/src/: App.jsx  index.css
graph/: flow.dot
scripts/: check_api_mode.py  dev_run.sh  replay_eval.py
specs/001-weather-aware-scheduler/: plan.md  quickstart.md  spec.md  tasks-multi-agent-original.md  tasks-remaining.md  tasks.md
specs/001-weather-aware-scheduler/checklists/: requirements.md
src/: __init__.py
src/adapters/primary/api/: server.py
src/agents/: __init__.py  base.py  calendar_agent.py  orchestrator.py  parser_agent.py  protocol.py
src/cli/: main.py  prompts.py
src/graph/: __init__.py  builder.py  edges.py  nodes.py  visualizer.py
src/models/: __init__.py  entities.py  outputs.py  state.py
src/services/: __init__.py  formatter.py  parser.py  policy.py  time_utils.py  validator.py
src/tools/: __init__.py  base.py  calendar_tools.py  mock_calendar.py  mock_weather.py  parser_tools.py  real_calendar.py  real_weather.py
tests/: __init__.py
tests/adapters/primary/: test_api.py
tests/agents/: test_calendar_agent.py  test_parser_agent.py
tests/contract/: __init__.py  test_calendar_contract.py  test_weather_contract.py
tests/integration/: test_conflict_resolution.py  test_missing_slot.py  test_rainy_adjustment.py  test_service_failure.py  test_sunny_path.py  test_us1_simple_scheduling.py
tests/unit/: test_calendar_tools.py  test_formatter.py  test_mock_tools.py  test_parser.py  test_time_utils.py  test_validator.py
